# ikc

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  ikc_orig.py  pyproject.toml  requirements.txt  setup.py
app/: ikc.cpp
data/: cit_hepph_leiden_0.01.tsv
examples/: example.py  maximal_kcore_example.py
lib/algorithms/: clustering_validation.h  connected_components.h  ikc.h  kcore.h  maximal_kcore_search.h  minimum_kcore_search.h  streaming_ikc.h
lib/data_structures/: graph.h
lib/io/: graph_io.h
python/: bindings.cpp  example.py  minimum_kcore_caching_example.py  minimum_kcore_example.py  streaming_example.py  test_streaming.py
python/ikc/: __init__.py
